--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://secret-caverns-78901.herokuapp.com/"
 }
